# list-commits-action

./: CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  action.yml  taplo.toml
.github/workflows/: ci.yml  test-action.yml
action/: list-commits.sh
actions/: Dockerfile
src/: action.rs  main.rs
